test/compile_errors/stage1/obj/setting_a_section_on_a_local_variable.zig
export fn entry() i32 {
    var foo: i32 linksection(".text2") = 1234;
    return foo;
}

// setting a section on a local variable
//
// tmp.zig:2:30: error: cannot set section of local variable 'foo'
